# system_explorer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  README.md  app.cpp  build_icons_resouces.sh
src/config/: config.cpp  config.hpp  user_config.cpp  user_config.hpp  user_config_impl.hpp
src/core/: .signals_dict.cpp.swp  proc_process_stat.hpp  proc_process_stat_parser.cpp  proc_process_stat_parser.hpp  proc_stat.hpp  proc_stat_parser.cpp  proc_stat_parser.hpp  proc_tree_stat_manager.cpp  proc_tree_stat_manager.hpp  proc_tree_stat_manager_impl.hpp  process_manager.cpp  process_manager.hpp  process_manager_impl.hpp  processes_stat_manager.cpp  processes_stat_manager.hpp  processes_stat_manager_impl.hpp  signal_manager.cpp  signal_manager.hpp  signal_manager_impl.hpp  signal_types_dict.cpp  signal_types_dict.hpp  signal_types_dict_impl.hpp  signals_dict.cpp  signals_dict.hpp  signals_dict_impl.hpp
src/core/models/: proc_process_stat.hpp  proc_stat.hpp  proc_tree_stat.hpp  process.cpp  process.hpp  process_cpu_stat.hpp  process_impl.hpp  process_stat.hpp  process_state.hpp  process_state_helpers.cpp  process_state_helpers.hpp  process_state_helpers_impl.hpp  process_tree.cpp  process_tree.hpp  process_tree_impl.hpp  processes_stat.hpp  processes_stat_common.hpp  signal.cpp  signal.hpp  signal_type.cpp  signal_type.hpp
src/core/parsers/: proc_process_stat_parser.cpp  proc_process_stat_parser.hpp  proc_stat_parser.cpp  proc_stat_parser.hpp
src/doc/: CMakeLists.txt  app_reference.rst  conf.py.in  index.rst  lib.rst
src/gui/: .main_window.cpp.swp  main_window.cpp  main_window.hpp  main_window_impl.hpp  mvc_main_window.cpp  mvc_main_window.hpp  mvvp_main_window.cpp  mvvp_main_window.hpp  process_data.cpp  process_data.hpp  processes_tree_list_item_comparator.cpp  processes_tree_list_item_comparator.cpp~  processes_tree_list_item_comparator.hpp  processes_tree_list_item_comparator.hpp~
src/gui/control/: control_base.cpp  control_base.h  control_base.hpp  icon_control.cpp  icon_control.hpp  searchable_control_base.cpp  searchable_control_base.hpp  searchable_list_control.cpp  searchable_list_control.hpp  searchable_listview_control.cpp  searchable_listview_control.hpp  searchable_treelist_control.cpp  searchable_treelist_control.hpp  searchable_treelist_control_base.cpp  searchable_treelist_control_base.hpp
src/gui/controller/: controller_base.cpp  controller_base.hpp  icontroller.hpp  main_controller.cpp  main_controller.hpp  process_controller.hpp  process_details_controller.hpp  process_tree_controller.cpp  process_tree_controller.hpp
src/gui/view/: processes_treelist_view.hpp
src/gui/view_controller/: about_dialog_view_controller.cpp  about_dialog_view_controller.hpp  iview_controller.hpp  process_details_view_controller.hpp  process_tree_view_controller.cpp  process_tree_view_controller.hpp  processes_tree_list_item_comparator.cpp  processes_tree_list_item_comparator.hpp  resources_view_controller.cpp  resources_view_controller.hpp  root_view_controller.cpp  root_view_controller.hpp  view_controller_base.cpp  view_controller_base.hpp
src/lib/libFS/: CMakeLists.txt  README.md
src/lib/libFS/doc/: CMakeLists.txt  conf.py.in  index.rst
src/lib/libFS/src/: fs.cpp  fs_impl.hpp
src/lib/libOS/: CMakeLists.txt  README.md
src/lib/libOS/doc/: CMakeLists.txt  conf.py.in  index.rst
src/lib/libUI/: CMakeLists.txt  README.md
src/lib/libUI/doc/: CMakeLists.txt  conf.py.in  index.rst
src/lib/libWCE/: CMakeLists.txt  README.md
src/lib/libWCE/doc/: CMakeLists.txt  conf.py.in
src/lib/libWCE/src/: wce.cpp
src/lib/libWCE/use/: test_runner.cpp  use_wild_card_expr.cpp
src/lib/wxCharts/: CMakeLists.txt
src/lib/wxCharts/samples/: CMakeLists.txt
src/lib/wxCharts/src/: wxchartspresentationtheme.cpp  wxlinechart.cpp  wxlinechartctrl.cpp  wxlinechartdatasetoptions.cpp
src/libs/fs/src/: fs.cpp  fs_impl.hpp
src/libs/wild_card_expr/: CMakeLists.txt
src/libs/wild_card_expr/src/: wild_card_expr.cpp
src/resources/: realtime-01.xcf  resources.icons.cpp  resources.icons.h
src/resources/bak/: resources.icons.cpp
src/tests/core/: proc_process_stat_parser_test_runner.cpp  proc_stat_parser_test_runner.cpp  process_manager_test_runner.cpp
utils/resouces/hxtools-20231224/: .gitignore  LICENSES.txt  Makefile.am  NEWS.rst  README.rst  configure.ac
utils/resouces/hxtools-20231224/data/: Makefile.am  amber.theme  gdbinit  gitconfig  hxloginpref.conf  hxtools_bashrc.bash  hxtools_dircolors  hxtools_profile.bash  light.theme  light2.theme  neon.theme  ru-phonde.mim  vga.theme  white.theme
utils/resouces/hxtools-20231224/doc/: Makefile.am  aumeta.1  bin2c.1  bsvplay.1  checkbrack.1  clock_info.1  cwdiff.1  declone.1  diff2php.1  extract_d3pkg.1  extract_dxhog.1  extract_f3pod.1  extract_qupak.1  fd0ssh.1  filenameconv.1  fxterm.1  git-author-stat.1  git-forest.1  git-revert-stats.1  git-track.1  gpsh.1  hcdplay.1  hxnetload.8  hxtools.7  lchain.rst  ldif-duplicate-attrs.1  logontime.8  mailsplit.1  man2html.1  mod2opus.1  ofl.1  pcmdiff.1  pcmmix.1  pegrep.1  peicon.1  pesubst.1  psthreads.1  qplay.1  qtar.1  raregetty.8  (+12 more)
utils/resouces/hxtools-20231224/examples/: git-deconstruct  rc4
utils/resouces/hxtools-20231224/kbd/: Makefile.am  README  cp437AB.uni  cp437x.uni  uefi.psf
utils/resouces/hxtools-20231224/sadmin/: .gitignore  Makefile.am  clock_info.c  fd0ssh.c  filenameconv  hxnetload  ldif-duplicate-attrs  ldif-leading-spaces  logontime  ofl.c  pmap_dirty  proc_iomem_count.c  proc_stat_parse.c  psthreads.c  raregetty  recursive_lower  rpmdep.pl  su1  vcsaview  xfs_irecover.c
utils/resouces/hxtools-20231224/sdevel/: .gitignore  Makefile.am  bin2c.c  checkbrack.cpp  cwdiff  diff2php  doxygen-kerneldoc-filter  gh-trim-workflowruns  git-author-stat  git-blame-stats  git-forest  git-revert-stats  git-track  gxxdm.cpp  man2html  paddrspacesize  peicon.c  proc_stat_signal_decode  sourcefuncsize  spec-beautifier
utils/resouces/hxtools-20231224/smath/: Makefile.am  graph-fanout.c  graph-lchain.c
utils/resouces/hxtools-20231224/smm/: .gitignore  (+18 more)
(+92 files in other folders)
