# -*- Makefile -*-

AUTOMAKE_OPTIONS = foreign subdir-objects
SUBDIRS          = data doc kbd sadmin sdevel smath smm suser
DISTCHECK_CONFIGURE_FLAGS = --with-slibdir='$${abs_builddir}/slib'
EXTRA_DIST = .gitignore LICENSE.GPL2 LICENSE.GPL3 LICENSE.MIT LICENSES.txt NEWS.rst README.rst autogen.sh examples/git-deconstruct examples/rc4
