# -*- Makefile -*-

dist_sysconf_DATA = hxloginpref.conf

dist_pkgdata_DATA = \
	amber.theme \
	gdbearlyinit gdbinit gitconfig \
	hxloginpref.conf \
	hxtools_bashrc.bash \
	hxtools_dircolors \
	hxtools_profile.bash \
	light.theme light2.theme neon.theme ru-phonde.mim \
	rfc2307bis-utf8.schema \
	vga.theme white.theme
