# -*- Makefile -*-

dist_man_MANS = \
	aumeta.1 \
	bin2c.1 \
	bsvplay.1 \
	checkbrack.1 \
	clock_info.1 \
	cwdiff.1 \
	declone.1 \
	diff2php.1 \
	extract_d3pkg.1 \
	extract_dxhog.1 \
	extract_f3pod.1 \
	extract_qupak.1 \
	fd0ssh.1 \
	fxterm.1 \
	git-author-stat.1 \
	git-forest.1 \
	git-revert-stats.1 \
	git-track.1 gpsh.1 \
	hcdplay.1 \
	hxtools.7 \
	ldif-duplicate-attrs.1 \
	logontime.8 \
	mailsplit.1 \
	man2html.1 \
	mod2opus.1 \
	hxnetload.8 \
	ofl.1 \
	pegrep.1 \
	peicon.1 \
	pesubst.1 \
	qplay.1 \
	qtar.1 \
	pcmdiff.1 \
	pcmmix.1 \
	psthreads.1 \
	recursive_lower.1 \
	rezip.1 \
	rot13.1 \
	sourcefuncsize.1 \
	spec-beautifier.1 \
	ssa2srt.1 \
	sysinfo.1 \
	tailhex.1 \
	vcsaview.8 \
	wktimer.1 \
	xcp.1 \
	xfs_irecover.8

EXTRA_DIST = changelog.rst filenameconv.1 lchain.rst raregetty.8
